finish new java versions block